// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation Container should correctly render amp navigation 1`] = `
.emotion-0 {
  position: relative;
  background-color: #B80000;
  border-top: 0.0625rem solid #FFFFFF;
}

@media (max-width:37.4375rem) {
  .emotion-0.si-nav-open {
    background-color: #222222;
  }
}

.emotion-0 .emotion-71::after {
  left: 0;
}

.emotion-2 {
  position: relative;
  max-width: 80rem;
  margin: 0 auto;
}

.emotion-4 {
  position: relative;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 0;
  float: left;
  height: 2.75rem;
  width: 2.75rem;
}

.emotion-4:hover,
.emotion-4:focus {
  cursor: pointer;
  box-shadow: inset 0 0 0 0.25rem #FFFFFF;
}

.emotion-4:hover::after,
.emotion-4:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  border: 0.25rem solid #FFFFFF;
}

@media (min-width:37.5rem) {
  .emotion-4 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width:20rem) {
  .emotion-4 {
    height: 2.75rem;
    width: 2.75rem;
  }
}

.emotion-4 svg {
  vertical-align: middle;
}

.emotion-6 {
  color: #fff;
  fill: currentColor;
}

.emotion-10 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-12 {
  background-color: #222222;
  clear: both;
}

@media (min-width:37.5rem) {
  .emotion-12 {
    display: none;
    visibility: hidden;
  }
}

.emotion-14 {
  list-style-type: none;
  margin: 0;
  padding: 0 0.5rem;
  border-bottom: 0.125rem solid #3F3F42;
}

.emotion-16 {
  padding: 0.75rem 0;
  border-bottom: 0.0625rem solid #3F3F42;
}

.emotion-16:last-child {
  padding-bottom: 1rem;
  border: 0;
}

.emotion-18 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-18 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-18 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-18:hover,
.emotion-18:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-20 {
  border-left: 0.25rem solid #FFFFFF;
  padding-left: 0.5rem;
}

@media (max-width: 37.4375rem) {
  .emotion-64.si-nav-scrollable-hidden {
    display: none;
    visibility: hidden;
  }
}

@media (max-width:37.4375rem) {
  .emotion-66 {
    white-space: nowrap;
    overflow-x: scroll;
    -webkit-scroll-behavior: auto;
    -moz-scroll-behavior: auto;
    -ms-scroll-behavior: auto;
    scroll-behavior: auto;
    -webkit-overflow-scrolling: touch;
    -webkit-scrollbar-width: none;
    -moz-scrollbar-width: none;
    -ms-scrollbar-width: none;
    scrollbar-width: none;
    -ms-overflow-style: none;
  }

  .emotion-66::-webkit-scrollbar {
    display: none;
  }

  .emotion-66:after {
    content: ' ';
    height: 100%;
    width: 3rem;
    position: absolute;
    right: 0;
    bottom: 0;
    z-index: 3;
    overflow: hidden;
    pointer-events: none;
    background: linear-gradient( to right,rgba(184,0,0,0) 0%,rgba(184,0,0,1) 100% );
  }

  @media (min-width:25rem) {
    .emotion-66:after {
      width: 6rem;
    }
  }
}

.emotion-68 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  position: relative;
}

@media (min-width:37.5rem) {
  .emotion-68 {
    overflow: hidden;
  }
}

.emotion-70 {
  display: inline-block;
  position: relative;
  z-index: 2;
}

@media (max-width:37.4375rem) {
  .emotion-70:last-child {
    margin-right: 3rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-70::after {
    content: '';
    position: absolute;
    bottom: -1px;
    width: 80rem;
    border-bottom: 0.0625rem solid #EAB3B3;
    z-index: -1;
  }
}

.emotion-72 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #FDFDFD;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0.75rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-72 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-72 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (max-width:37.4375rem) {
  .emotion-72 {
    padding: 0.75rem 0.5rem;
  }
}

.emotion-72:hover::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
  border-bottom: 0.3125rem solid #FFFFFF;
}

.emotion-72:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
  top: 0;
  border: 0.25rem solid #FFFFFF;
}

.emotion-74::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
}

.emotion-80 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #FDFDFD;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0.75rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-80 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-80 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (max-width:37.4375rem) {
  .emotion-80 {
    padding: 0.75rem 0.5rem;
  }
}

.emotion-80:hover::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
}

.emotion-80:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
  top: 0;
  border: 0.25rem solid #FFFFFF;
}

<div>
  <nav
    class="emotion-0 emotion-1"
    dir="ltr"
    id="si-nav"
    role="navigation"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <amp-state
        id="menuState"
      >
        <script
          type="application/json"
        >
          {"expanded":false}
        </script>
      </amp-state>
      <button
        aria-expanded="false"
        class="emotion-4 emotion-5"
        data-amp-bind-aria-expanded="menuState.expanded ? \\"true\\" : \\"false\\""
        dir="ltr"
        on="tap:AMP.setState({ menuState: { expanded: !menuState.expanded }}),
        si-nav-dropdown-menu.toggleVisibility,
        si-nav-scrollable.toggleClass(class=si-nav-scrollable-hidden),
        si-nav.toggleClass(class=si-nav-open)
      "
        type="button"
      >
        <svg
          aria-hidden="true"
          class="emotion-6 emotion-7"
          data-amp-bind-hidden="menuState.expanded"
          focusable="false"
          height="2.75rem"
          viewBox="0 0 44 44"
          width="2.75rem"
        >
          <path
            d="M12 29h21v-2.333H12V29zm0-5.833h21v-2.334H12v2.334zM12 15v2.333h21V15H12z"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="emotion-6 emotion-7"
          data-amp-bind-hidden="!menuState.expanded"
          focusable="false"
          height="2.75rem"
          hidden=""
          viewBox="0 0 44 44"
          width="2.75rem"
        >
          <path
            d="M26.741 15L21.6 20.142 16.458 15 15 16.458l5.142 5.142L15 26.742l1.458 1.458 5.142-5.141 5.141 5.141 1.459-1.458-5.142-5.142 5.142-5.142z"
            fill-rule="evenodd"
          />
        </svg>
        <span
          class="emotion-10 emotion-11"
        >
          Sections
        </span>
      </button>
      <div
        class="emotion-12 emotion-13"
        hidden=""
        id="si-nav-dropdown-menu"
      >
        <ul
          class="emotion-14 emotion-15"
          role="list"
        >
          <li
            class="emotion-16 emotion-17"
            role="listitem"
          >
            <a
              class="emotion-18 emotion-19"
              href="/news"
            >
              <span
                class="emotion-20 emotion-21"
                dir="ltr"
                role="text"
              >
                <span
                  class="emotion-10 emotion-11"
                >
                  Current page
                  , 
                </span>
                Home
              </span>
            </a>
          </li>
          <li
            class="emotion-16 emotion-17"
            role="listitem"
          >
            <a
              class="emotion-18 emotion-19"
              href="/news/uk"
            >
              UK
            </a>
          </li>
          <li
            class="emotion-16 emotion-17"
            role="listitem"
          >
            <a
              class="emotion-18 emotion-19"
              href="/news/world"
            >
              World
            </a>
          </li>
          <li
            class="emotion-16 emotion-17"
            role="listitem"
          >
            <a
              class="emotion-18 emotion-19"
              href="/news/business"
            >
              Business
            </a>
          </li>
          <li
            class="emotion-16 emotion-17"
            role="listitem"
          >
            <a
              class="emotion-18 emotion-19"
              href="/news/politics"
            >
              Politics
            </a>
          </li>
          <li
            class="emotion-16 emotion-17"
            role="listitem"
          >
            <a
              class="emotion-18 emotion-19"
              href="/news/technology"
            >
              Tech
            </a>
          </li>
          <li
            class="emotion-16 emotion-17"
            role="listitem"
          >
            <a
              class="emotion-18 emotion-19"
              href="/news/science_and_environment"
            >
              Science
            </a>
          </li>
          <li
            class="emotion-16 emotion-17"
            role="listitem"
          >
            <a
              class="emotion-18 emotion-19"
              href="/news/health"
            >
              Health
            </a>
          </li>
          <li
            class="emotion-16 emotion-17"
            role="listitem"
          >
            <a
              class="emotion-18 emotion-19"
              href="/news/education"
            >
              Family & Education
            </a>
          </li>
          <li
            class="emotion-16 emotion-17"
            role="listitem"
          >
            <a
              class="emotion-18 emotion-19"
              href="/news/entertainment_and_arts"
            >
              Entertainment & Arts
            </a>
          </li>
          <li
            class="emotion-16 emotion-17"
            role="listitem"
          >
            <a
              class="emotion-18 emotion-19"
              href="/news/stories"
            >
              Stories
            </a>
          </li>
        </ul>
      </div>
      <div
        class="emotion-64 emotion-65 emotion-66 emotion-67"
        dir="ltr"
        id="si-nav-scrollable"
      >
        <ul
          class="emotion-68 emotion-69"
          role="list"
        >
          <li
            class="emotion-70 emotion-71"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-72 emotion-73"
              href="/news"
            >
              <span
                class="emotion-74 emotion-75"
                role="text"
              >
                <span
                  class="emotion-10 emotion-11"
                >
                  Current page
                  , 
                </span>
                Home
              </span>
            </a>
          </li>
          <li
            class="emotion-70 emotion-71"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-80 emotion-73"
              href="/news/uk"
            >
              UK
            </a>
          </li>
          <li
            class="emotion-70 emotion-71"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-80 emotion-73"
              href="/news/world"
            >
              World
            </a>
          </li>
          <li
            class="emotion-70 emotion-71"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-80 emotion-73"
              href="/news/business"
            >
              Business
            </a>
          </li>
          <li
            class="emotion-70 emotion-71"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-80 emotion-73"
              href="/news/politics"
            >
              Politics
            </a>
          </li>
          <li
            class="emotion-70 emotion-71"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-80 emotion-73"
              href="/news/technology"
            >
              Tech
            </a>
          </li>
          <li
            class="emotion-70 emotion-71"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-80 emotion-73"
              href="/news/science_and_environment"
            >
              Science
            </a>
          </li>
          <li
            class="emotion-70 emotion-71"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-80 emotion-73"
              href="/news/health"
            >
              Health
            </a>
          </li>
          <li
            class="emotion-70 emotion-71"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-80 emotion-73"
              href="/news/education"
            >
              Family & Education
            </a>
          </li>
          <li
            class="emotion-70 emotion-71"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-80 emotion-73"
              href="/news/entertainment_and_arts"
            >
              Entertainment & Arts
            </a>
          </li>
          <li
            class="emotion-70 emotion-71"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-80 emotion-73"
              href="/news/stories"
            >
              Stories
            </a>
          </li>
        </ul>
      </div>
    </div>
  </nav>
</div>
`;

exports[`Navigation Container should correctly render amp navigation on non-home navigation page 1`] = `
.emotion-0 {
  position: relative;
  background-color: #B80000;
  border-top: 0.0625rem solid #FFFFFF;
}

@media (max-width:37.4375rem) {
  .emotion-0.si-nav-open {
    background-color: #222222;
  }
}

.emotion-0 .emotion-67::after {
  left: 0;
}

.emotion-2 {
  position: relative;
  max-width: 80rem;
  margin: 0 auto;
}

.emotion-4 {
  position: relative;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 0;
  float: left;
  height: 2.75rem;
  width: 2.75rem;
}

.emotion-4:hover,
.emotion-4:focus {
  cursor: pointer;
  box-shadow: inset 0 0 0 0.25rem #FFFFFF;
}

.emotion-4:hover::after,
.emotion-4:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  border: 0.25rem solid #FFFFFF;
}

@media (min-width:37.5rem) {
  .emotion-4 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width:20rem) {
  .emotion-4 {
    height: 2.75rem;
    width: 2.75rem;
  }
}

.emotion-4 svg {
  vertical-align: middle;
}

.emotion-6 {
  color: #fff;
  fill: currentColor;
}

.emotion-10 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-12 {
  background-color: #222222;
  clear: both;
}

@media (min-width:37.5rem) {
  .emotion-12 {
    display: none;
    visibility: hidden;
  }
}

.emotion-14 {
  list-style-type: none;
  margin: 0;
  padding: 0 0.5rem;
  border-bottom: 0.125rem solid #3F3F42;
}

.emotion-16 {
  padding: 0.75rem 0;
  border-bottom: 0.0625rem solid #3F3F42;
}

.emotion-16:last-child {
  padding-bottom: 1rem;
  border: 0;
}

.emotion-18 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-18 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-18 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-18:hover,
.emotion-18:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

@media (max-width: 37.4375rem) {
  .emotion-60.si-nav-scrollable-hidden {
    display: none;
    visibility: hidden;
  }
}

@media (max-width:37.4375rem) {
  .emotion-62 {
    white-space: nowrap;
    overflow-x: scroll;
    -webkit-scroll-behavior: auto;
    -moz-scroll-behavior: auto;
    -ms-scroll-behavior: auto;
    scroll-behavior: auto;
    -webkit-overflow-scrolling: touch;
    -webkit-scrollbar-width: none;
    -moz-scrollbar-width: none;
    -ms-scrollbar-width: none;
    scrollbar-width: none;
    -ms-overflow-style: none;
  }

  .emotion-62::-webkit-scrollbar {
    display: none;
  }

  .emotion-62:after {
    content: ' ';
    height: 100%;
    width: 3rem;
    position: absolute;
    right: 0;
    bottom: 0;
    z-index: 3;
    overflow: hidden;
    pointer-events: none;
    background: linear-gradient( to right,rgba(184,0,0,0) 0%,rgba(184,0,0,1) 100% );
  }

  @media (min-width:25rem) {
    .emotion-62:after {
      width: 6rem;
    }
  }
}

.emotion-64 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  position: relative;
}

@media (min-width:37.5rem) {
  .emotion-64 {
    overflow: hidden;
  }
}

.emotion-66 {
  display: inline-block;
  position: relative;
  z-index: 2;
}

@media (max-width:37.4375rem) {
  .emotion-66:last-child {
    margin-right: 3rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-66::after {
    content: '';
    position: absolute;
    bottom: -1px;
    width: 80rem;
    border-bottom: 0.0625rem solid #EAB3B3;
    z-index: -1;
  }
}

.emotion-68 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #FDFDFD;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0.75rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-68 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-68 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (max-width:37.4375rem) {
  .emotion-68 {
    padding: 0.75rem 0.5rem;
  }
}

.emotion-68:hover::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
}

.emotion-68:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
  top: 0;
  border: 0.25rem solid #FFFFFF;
}

<div>
  <nav
    class="emotion-0 emotion-1"
    dir="ltr"
    id="si-nav"
    role="navigation"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <amp-state
        id="menuState"
      >
        <script
          type="application/json"
        >
          {"expanded":false}
        </script>
      </amp-state>
      <button
        aria-expanded="false"
        class="emotion-4 emotion-5"
        data-amp-bind-aria-expanded="menuState.expanded ? \\"true\\" : \\"false\\""
        dir="ltr"
        on="tap:AMP.setState({ menuState: { expanded: !menuState.expanded }}),
        si-nav-dropdown-menu.toggleVisibility,
        si-nav-scrollable.toggleClass(class=si-nav-scrollable-hidden),
        si-nav.toggleClass(class=si-nav-open)
      "
        type="button"
      >
        <svg
          aria-hidden="true"
          class="emotion-6 emotion-7"
          data-amp-bind-hidden="menuState.expanded"
          focusable="false"
          height="2.75rem"
          viewBox="0 0 44 44"
          width="2.75rem"
        >
          <path
            d="M12 29h21v-2.333H12V29zm0-5.833h21v-2.334H12v2.334zM12 15v2.333h21V15H12z"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="emotion-6 emotion-7"
          data-amp-bind-hidden="!menuState.expanded"
          focusable="false"
          height="2.75rem"
          hidden=""
          viewBox="0 0 44 44"
          width="2.75rem"
        >
          <path
            d="M26.741 15L21.6 20.142 16.458 15 15 16.458l5.142 5.142L15 26.742l1.458 1.458 5.142-5.141 5.141 5.141 1.459-1.458-5.142-5.142 5.142-5.142z"
            fill-rule="evenodd"
          />
        </svg>
        <span
          class="emotion-10 emotion-11"
        >
          Sections
        </span>
      </button>
      <div
        class="emotion-12 emotion-13"
        hidden=""
        id="si-nav-dropdown-menu"
      >
        <ul
          class="emotion-14 emotion-15"
          role="list"
        >
          <li
            class="emotion-16 emotion-17"
            role="listitem"
          >
            <a
              class="emotion-18 emotion-19"
              href="/news"
            >
              Home
            </a>
          </li>
          <li
            class="emotion-16 emotion-17"
            role="listitem"
          >
            <a
              class="emotion-18 emotion-19"
              href="/news/uk"
            >
              UK
            </a>
          </li>
          <li
            class="emotion-16 emotion-17"
            role="listitem"
          >
            <a
              class="emotion-18 emotion-19"
              href="/news/world"
            >
              World
            </a>
          </li>
          <li
            class="emotion-16 emotion-17"
            role="listitem"
          >
            <a
              class="emotion-18 emotion-19"
              href="/news/business"
            >
              Business
            </a>
          </li>
          <li
            class="emotion-16 emotion-17"
            role="listitem"
          >
            <a
              class="emotion-18 emotion-19"
              href="/news/politics"
            >
              Politics
            </a>
          </li>
          <li
            class="emotion-16 emotion-17"
            role="listitem"
          >
            <a
              class="emotion-18 emotion-19"
              href="/news/technology"
            >
              Tech
            </a>
          </li>
          <li
            class="emotion-16 emotion-17"
            role="listitem"
          >
            <a
              class="emotion-18 emotion-19"
              href="/news/science_and_environment"
            >
              Science
            </a>
          </li>
          <li
            class="emotion-16 emotion-17"
            role="listitem"
          >
            <a
              class="emotion-18 emotion-19"
              href="/news/health"
            >
              Health
            </a>
          </li>
          <li
            class="emotion-16 emotion-17"
            role="listitem"
          >
            <a
              class="emotion-18 emotion-19"
              href="/news/education"
            >
              Family & Education
            </a>
          </li>
          <li
            class="emotion-16 emotion-17"
            role="listitem"
          >
            <a
              class="emotion-18 emotion-19"
              href="/news/entertainment_and_arts"
            >
              Entertainment & Arts
            </a>
          </li>
          <li
            class="emotion-16 emotion-17"
            role="listitem"
          >
            <a
              class="emotion-18 emotion-19"
              href="/news/stories"
            >
              Stories
            </a>
          </li>
        </ul>
      </div>
      <div
        class="emotion-60 emotion-61 emotion-62 emotion-63"
        dir="ltr"
        id="si-nav-scrollable"
      >
        <ul
          class="emotion-64 emotion-65"
          role="list"
        >
          <li
            class="emotion-66 emotion-67"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-68 emotion-69"
              href="/news"
            >
              Home
            </a>
          </li>
          <li
            class="emotion-66 emotion-67"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-68 emotion-69"
              href="/news/uk"
            >
              UK
            </a>
          </li>
          <li
            class="emotion-66 emotion-67"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-68 emotion-69"
              href="/news/world"
            >
              World
            </a>
          </li>
          <li
            class="emotion-66 emotion-67"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-68 emotion-69"
              href="/news/business"
            >
              Business
            </a>
          </li>
          <li
            class="emotion-66 emotion-67"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-68 emotion-69"
              href="/news/politics"
            >
              Politics
            </a>
          </li>
          <li
            class="emotion-66 emotion-67"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-68 emotion-69"
              href="/news/technology"
            >
              Tech
            </a>
          </li>
          <li
            class="emotion-66 emotion-67"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-68 emotion-69"
              href="/news/science_and_environment"
            >
              Science
            </a>
          </li>
          <li
            class="emotion-66 emotion-67"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-68 emotion-69"
              href="/news/health"
            >
              Health
            </a>
          </li>
          <li
            class="emotion-66 emotion-67"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-68 emotion-69"
              href="/news/education"
            >
              Family & Education
            </a>
          </li>
          <li
            class="emotion-66 emotion-67"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-68 emotion-69"
              href="/news/entertainment_and_arts"
            >
              Entertainment & Arts
            </a>
          </li>
          <li
            class="emotion-66 emotion-67"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-68 emotion-69"
              href="/news/stories"
            >
              Stories
            </a>
          </li>
        </ul>
      </div>
    </div>
  </nav>
</div>
`;

exports[`Navigation Container should correctly render amp navigation on non-navigation page 1`] = `
.emotion-0 {
  position: relative;
  background-color: #B80000;
  border-top: 0.0625rem solid #FFFFFF;
}

@media (max-width:37.4375rem) {
  .emotion-0.si-nav-open {
    background-color: #222222;
  }
}

.emotion-0 .emotion-67::after {
  left: 0;
}

.emotion-2 {
  position: relative;
  max-width: 80rem;
  margin: 0 auto;
}

.emotion-4 {
  position: relative;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 0;
  float: left;
  height: 2.75rem;
  width: 2.75rem;
}

.emotion-4:hover,
.emotion-4:focus {
  cursor: pointer;
  box-shadow: inset 0 0 0 0.25rem #FFFFFF;
}

.emotion-4:hover::after,
.emotion-4:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  border: 0.25rem solid #FFFFFF;
}

@media (min-width:37.5rem) {
  .emotion-4 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width:20rem) {
  .emotion-4 {
    height: 2.75rem;
    width: 2.75rem;
  }
}

.emotion-4 svg {
  vertical-align: middle;
}

.emotion-6 {
  color: #fff;
  fill: currentColor;
}

.emotion-10 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-12 {
  background-color: #222222;
  clear: both;
}

@media (min-width:37.5rem) {
  .emotion-12 {
    display: none;
    visibility: hidden;
  }
}

.emotion-14 {
  list-style-type: none;
  margin: 0;
  padding: 0 0.5rem;
  border-bottom: 0.125rem solid #3F3F42;
}

.emotion-16 {
  padding: 0.75rem 0;
  border-bottom: 0.0625rem solid #3F3F42;
}

.emotion-16:last-child {
  padding-bottom: 1rem;
  border: 0;
}

.emotion-18 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-18 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-18 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-18:hover,
.emotion-18:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

@media (max-width: 37.4375rem) {
  .emotion-60.si-nav-scrollable-hidden {
    display: none;
    visibility: hidden;
  }
}

@media (max-width:37.4375rem) {
  .emotion-62 {
    white-space: nowrap;
    overflow-x: scroll;
    -webkit-scroll-behavior: auto;
    -moz-scroll-behavior: auto;
    -ms-scroll-behavior: auto;
    scroll-behavior: auto;
    -webkit-overflow-scrolling: touch;
    -webkit-scrollbar-width: none;
    -moz-scrollbar-width: none;
    -ms-scrollbar-width: none;
    scrollbar-width: none;
    -ms-overflow-style: none;
  }

  .emotion-62::-webkit-scrollbar {
    display: none;
  }

  .emotion-62:after {
    content: ' ';
    height: 100%;
    width: 3rem;
    position: absolute;
    right: 0;
    bottom: 0;
    z-index: 3;
    overflow: hidden;
    pointer-events: none;
    background: linear-gradient( to right,rgba(184,0,0,0) 0%,rgba(184,0,0,1) 100% );
  }

  @media (min-width:25rem) {
    .emotion-62:after {
      width: 6rem;
    }
  }
}

.emotion-64 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  position: relative;
}

@media (min-width:37.5rem) {
  .emotion-64 {
    overflow: hidden;
  }
}

.emotion-66 {
  display: inline-block;
  position: relative;
  z-index: 2;
}

@media (max-width:37.4375rem) {
  .emotion-66:last-child {
    margin-right: 3rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-66::after {
    content: '';
    position: absolute;
    bottom: -1px;
    width: 80rem;
    border-bottom: 0.0625rem solid #EAB3B3;
    z-index: -1;
  }
}

.emotion-68 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #FDFDFD;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0.75rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-68 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-68 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (max-width:37.4375rem) {
  .emotion-68 {
    padding: 0.75rem 0.5rem;
  }
}

.emotion-68:hover::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
}

.emotion-68:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
  top: 0;
  border: 0.25rem solid #FFFFFF;
}

<div>
  <nav
    class="emotion-0 emotion-1"
    dir="ltr"
    id="si-nav"
    role="navigation"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <amp-state
        id="menuState"
      >
        <script
          type="application/json"
        >
          {"expanded":false}
        </script>
      </amp-state>
      <button
        aria-expanded="false"
        class="emotion-4 emotion-5"
        data-amp-bind-aria-expanded="menuState.expanded ? \\"true\\" : \\"false\\""
        dir="ltr"
        on="tap:AMP.setState({ menuState: { expanded: !menuState.expanded }}),
        si-nav-dropdown-menu.toggleVisibility,
        si-nav-scrollable.toggleClass(class=si-nav-scrollable-hidden),
        si-nav.toggleClass(class=si-nav-open)
      "
        type="button"
      >
        <svg
          aria-hidden="true"
          class="emotion-6 emotion-7"
          data-amp-bind-hidden="menuState.expanded"
          focusable="false"
          height="2.75rem"
          viewBox="0 0 44 44"
          width="2.75rem"
        >
          <path
            d="M12 29h21v-2.333H12V29zm0-5.833h21v-2.334H12v2.334zM12 15v2.333h21V15H12z"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="emotion-6 emotion-7"
          data-amp-bind-hidden="!menuState.expanded"
          focusable="false"
          height="2.75rem"
          hidden=""
          viewBox="0 0 44 44"
          width="2.75rem"
        >
          <path
            d="M26.741 15L21.6 20.142 16.458 15 15 16.458l5.142 5.142L15 26.742l1.458 1.458 5.142-5.141 5.141 5.141 1.459-1.458-5.142-5.142 5.142-5.142z"
            fill-rule="evenodd"
          />
        </svg>
        <span
          class="emotion-10 emotion-11"
        >
          Sections
        </span>
      </button>
      <div
        class="emotion-12 emotion-13"
        hidden=""
        id="si-nav-dropdown-menu"
      >
        <ul
          class="emotion-14 emotion-15"
          role="list"
        >
          <li
            class="emotion-16 emotion-17"
            role="listitem"
          >
            <a
              class="emotion-18 emotion-19"
              href="/news"
            >
              Home
            </a>
          </li>
          <li
            class="emotion-16 emotion-17"
            role="listitem"
          >
            <a
              class="emotion-18 emotion-19"
              href="/news/uk"
            >
              UK
            </a>
          </li>
          <li
            class="emotion-16 emotion-17"
            role="listitem"
          >
            <a
              class="emotion-18 emotion-19"
              href="/news/world"
            >
              World
            </a>
          </li>
          <li
            class="emotion-16 emotion-17"
            role="listitem"
          >
            <a
              class="emotion-18 emotion-19"
              href="/news/business"
            >
              Business
            </a>
          </li>
          <li
            class="emotion-16 emotion-17"
            role="listitem"
          >
            <a
              class="emotion-18 emotion-19"
              href="/news/politics"
            >
              Politics
            </a>
          </li>
          <li
            class="emotion-16 emotion-17"
            role="listitem"
          >
            <a
              class="emotion-18 emotion-19"
              href="/news/technology"
            >
              Tech
            </a>
          </li>
          <li
            class="emotion-16 emotion-17"
            role="listitem"
          >
            <a
              class="emotion-18 emotion-19"
              href="/news/science_and_environment"
            >
              Science
            </a>
          </li>
          <li
            class="emotion-16 emotion-17"
            role="listitem"
          >
            <a
              class="emotion-18 emotion-19"
              href="/news/health"
            >
              Health
            </a>
          </li>
          <li
            class="emotion-16 emotion-17"
            role="listitem"
          >
            <a
              class="emotion-18 emotion-19"
              href="/news/education"
            >
              Family & Education
            </a>
          </li>
          <li
            class="emotion-16 emotion-17"
            role="listitem"
          >
            <a
              class="emotion-18 emotion-19"
              href="/news/entertainment_and_arts"
            >
              Entertainment & Arts
            </a>
          </li>
          <li
            class="emotion-16 emotion-17"
            role="listitem"
          >
            <a
              class="emotion-18 emotion-19"
              href="/news/stories"
            >
              Stories
            </a>
          </li>
        </ul>
      </div>
      <div
        class="emotion-60 emotion-61 emotion-62 emotion-63"
        dir="ltr"
        id="si-nav-scrollable"
      >
        <ul
          class="emotion-64 emotion-65"
          role="list"
        >
          <li
            class="emotion-66 emotion-67"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-68 emotion-69"
              href="/news"
            >
              Home
            </a>
          </li>
          <li
            class="emotion-66 emotion-67"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-68 emotion-69"
              href="/news/uk"
            >
              UK
            </a>
          </li>
          <li
            class="emotion-66 emotion-67"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-68 emotion-69"
              href="/news/world"
            >
              World
            </a>
          </li>
          <li
            class="emotion-66 emotion-67"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-68 emotion-69"
              href="/news/business"
            >
              Business
            </a>
          </li>
          <li
            class="emotion-66 emotion-67"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-68 emotion-69"
              href="/news/politics"
            >
              Politics
            </a>
          </li>
          <li
            class="emotion-66 emotion-67"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-68 emotion-69"
              href="/news/technology"
            >
              Tech
            </a>
          </li>
          <li
            class="emotion-66 emotion-67"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-68 emotion-69"
              href="/news/science_and_environment"
            >
              Science
            </a>
          </li>
          <li
            class="emotion-66 emotion-67"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-68 emotion-69"
              href="/news/health"
            >
              Health
            </a>
          </li>
          <li
            class="emotion-66 emotion-67"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-68 emotion-69"
              href="/news/education"
            >
              Family & Education
            </a>
          </li>
          <li
            class="emotion-66 emotion-67"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-68 emotion-69"
              href="/news/entertainment_and_arts"
            >
              Entertainment & Arts
            </a>
          </li>
          <li
            class="emotion-66 emotion-67"
            dir="ltr"
            role="listitem"
          >
            <a
              class="emotion-68 emotion-69"
              href="/news/stories"
            >
              Stories
            </a>
          </li>
        </ul>
      </div>
    </div>
  </nav>
</div>
`;

exports[`Navigation Container should correctly render canonical navigation 1`] = `
.emotion-0 {
  position: relative;
  background-color: #B80000;
  border-top: 0.0625rem solid #FFFFFF;
}

.emotion-0 .emotion-17::after {
  left: 0;
}

.emotion-2 {
  position: relative;
  max-width: 80rem;
  margin: 0 auto;
}

.emotion-4 {
  position: relative;
}

.emotion-6 {
  position: relative;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 0;
  float: left;
  height: 2.75rem;
  width: 2.75rem;
}

.emotion-6:hover,
.emotion-6:focus {
  cursor: pointer;
  box-shadow: inset 0 0 0 0.25rem #FFFFFF;
}

.emotion-6:hover::after,
.emotion-6:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  border: 0.25rem solid #FFFFFF;
}

@media (min-width:37.5rem) {
  .emotion-6 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width:20rem) {
  .emotion-6 {
    height: 2.75rem;
    width: 2.75rem;
  }
}

.emotion-6 svg {
  vertical-align: middle;
}

.emotion-8 {
  color: #fff;
  fill: currentColor;
}

.emotion-10 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

@media (max-width:37.4375rem) {
  .emotion-12 {
    white-space: nowrap;
    overflow-x: scroll;
    -webkit-scroll-behavior: auto;
    -moz-scroll-behavior: auto;
    -ms-scroll-behavior: auto;
    scroll-behavior: auto;
    -webkit-overflow-scrolling: touch;
    -webkit-scrollbar-width: none;
    -moz-scrollbar-width: none;
    -ms-scrollbar-width: none;
    scrollbar-width: none;
    -ms-overflow-style: none;
  }

  .emotion-12::-webkit-scrollbar {
    display: none;
  }

  .emotion-12:after {
    content: ' ';
    height: 100%;
    width: 3rem;
    position: absolute;
    right: 0;
    bottom: 0;
    z-index: 3;
    overflow: hidden;
    pointer-events: none;
    background: linear-gradient( to right,rgba(184,0,0,0) 0%,rgba(184,0,0,1) 100% );
  }

  @media (min-width:25rem) {
    .emotion-12:after {
      width: 6rem;
    }
  }
}

.emotion-14 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  position: relative;
}

@media (min-width:37.5rem) {
  .emotion-14 {
    overflow: hidden;
  }
}

.emotion-16 {
  display: inline-block;
  position: relative;
  z-index: 2;
}

@media (max-width:37.4375rem) {
  .emotion-16:last-child {
    margin-right: 3rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-16::after {
    content: '';
    position: absolute;
    bottom: -1px;
    width: 80rem;
    border-bottom: 0.0625rem solid #EAB3B3;
    z-index: -1;
  }
}

.emotion-18 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #FDFDFD;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0.75rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-18 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-18 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (max-width:37.4375rem) {
  .emotion-18 {
    padding: 0.75rem 0.5rem;
  }
}

.emotion-18:hover::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
  border-bottom: 0.3125rem solid #FFFFFF;
}

.emotion-18:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
  top: 0;
  border: 0.25rem solid #FFFFFF;
}

.emotion-20::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
}

.emotion-26 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #FDFDFD;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0.75rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-26 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-26 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (max-width:37.4375rem) {
  .emotion-26 {
    padding: 0.75rem 0.5rem;
  }
}

.emotion-26:hover::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
}

.emotion-26:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
  top: 0;
  border: 0.25rem solid #FFFFFF;
}

.emotion-64 {
  background-color: #222222;
  clear: both;
  overflow: hidden;
  height: 0;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  -webkit-transition-timing-function: cubic-bezier(0,0,0.58,1);
  transition-timing-function: cubic-bezier(0,0,0.58,1);
  visibility: hidden;
}

@media (min-width:37.5rem) {
  .emotion-64 {
    display: none;
    visibility: hidden;
  }
}

@media (prefers-reduced-motion:reduce) {
  .emotion-64 {
    -webkit-transition: none;
    transition: none;
  }
}

.emotion-66 {
  list-style-type: none;
  margin: 0;
  padding: 0 0.5rem;
  border-bottom: 0.125rem solid #3F3F42;
}

.emotion-68 {
  padding: 0.75rem 0;
  border-bottom: 0.0625rem solid #3F3F42;
}

.emotion-68:last-child {
  padding-bottom: 1rem;
  border: 0;
}

.emotion-70 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-70 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-70 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-70:hover,
.emotion-70:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-72 {
  border-left: 0.25rem solid #FFFFFF;
  padding-left: 0.5rem;
}

<div>
  <nav
    class="emotion-0 emotion-1"
    dir="ltr"
    role="navigation"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <button
          aria-expanded="false"
          class="emotion-6 emotion-7"
          dir="ltr"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="emotion-8 emotion-9"
            focusable="false"
            height="2.75rem"
            viewBox="0 0 44 44"
            width="2.75rem"
          >
            <path
              d="M12 29h21v-2.333H12V29zm0-5.833h21v-2.334H12v2.334zM12 15v2.333h21V15H12z"
            />
          </svg>
          <span
            class="emotion-10 emotion-11"
          >
            Sections
          </span>
        </button>
        <div
          class="emotion-12 emotion-13"
          dir="ltr"
        >
          <ul
            class="emotion-14 emotion-15"
            role="list"
          >
            <li
              class="emotion-16 emotion-17"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-18 emotion-19"
                href="/news"
              >
                <span
                  class="emotion-20 emotion-21"
                  role="text"
                >
                  <span
                    class="emotion-10 emotion-11"
                  >
                    Current page
                    , 
                  </span>
                  Home
                </span>
              </a>
            </li>
            <li
              class="emotion-16 emotion-17"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-26 emotion-19"
                href="/news/uk"
              >
                UK
              </a>
            </li>
            <li
              class="emotion-16 emotion-17"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-26 emotion-19"
                href="/news/world"
              >
                World
              </a>
            </li>
            <li
              class="emotion-16 emotion-17"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-26 emotion-19"
                href="/news/business"
              >
                Business
              </a>
            </li>
            <li
              class="emotion-16 emotion-17"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-26 emotion-19"
                href="/news/politics"
              >
                Politics
              </a>
            </li>
            <li
              class="emotion-16 emotion-17"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-26 emotion-19"
                href="/news/technology"
              >
                Tech
              </a>
            </li>
            <li
              class="emotion-16 emotion-17"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-26 emotion-19"
                href="/news/science_and_environment"
              >
                Science
              </a>
            </li>
            <li
              class="emotion-16 emotion-17"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-26 emotion-19"
                href="/news/health"
              >
                Health
              </a>
            </li>
            <li
              class="emotion-16 emotion-17"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-26 emotion-19"
                href="/news/education"
              >
                Family & Education
              </a>
            </li>
            <li
              class="emotion-16 emotion-17"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-26 emotion-19"
                href="/news/entertainment_and_arts"
              >
                Entertainment & Arts
              </a>
            </li>
            <li
              class="emotion-16 emotion-17"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-26 emotion-19"
                href="/news/stories"
              >
                Stories
              </a>
            </li>
          </ul>
        </div>
      </div>
      <div
        class="emotion-64 emotion-65"
        height="0"
      >
        <ul
          class="emotion-66 emotion-67"
          role="list"
        >
          <li
            class="emotion-68 emotion-69"
            role="listitem"
          >
            <a
              class="emotion-70 emotion-71"
              href="/news"
            >
              <span
                class="emotion-72 emotion-73"
                dir="ltr"
                role="text"
              >
                <span
                  class="emotion-10 emotion-11"
                >
                  Current page
                  , 
                </span>
                Home
              </span>
            </a>
          </li>
          <li
            class="emotion-68 emotion-69"
            role="listitem"
          >
            <a
              class="emotion-70 emotion-71"
              href="/news/uk"
            >
              UK
            </a>
          </li>
          <li
            class="emotion-68 emotion-69"
            role="listitem"
          >
            <a
              class="emotion-70 emotion-71"
              href="/news/world"
            >
              World
            </a>
          </li>
          <li
            class="emotion-68 emotion-69"
            role="listitem"
          >
            <a
              class="emotion-70 emotion-71"
              href="/news/business"
            >
              Business
            </a>
          </li>
          <li
            class="emotion-68 emotion-69"
            role="listitem"
          >
            <a
              class="emotion-70 emotion-71"
              href="/news/politics"
            >
              Politics
            </a>
          </li>
          <li
            class="emotion-68 emotion-69"
            role="listitem"
          >
            <a
              class="emotion-70 emotion-71"
              href="/news/technology"
            >
              Tech
            </a>
          </li>
          <li
            class="emotion-68 emotion-69"
            role="listitem"
          >
            <a
              class="emotion-70 emotion-71"
              href="/news/science_and_environment"
            >
              Science
            </a>
          </li>
          <li
            class="emotion-68 emotion-69"
            role="listitem"
          >
            <a
              class="emotion-70 emotion-71"
              href="/news/health"
            >
              Health
            </a>
          </li>
          <li
            class="emotion-68 emotion-69"
            role="listitem"
          >
            <a
              class="emotion-70 emotion-71"
              href="/news/education"
            >
              Family & Education
            </a>
          </li>
          <li
            class="emotion-68 emotion-69"
            role="listitem"
          >
            <a
              class="emotion-70 emotion-71"
              href="/news/entertainment_and_arts"
            >
              Entertainment & Arts
            </a>
          </li>
          <li
            class="emotion-68 emotion-69"
            role="listitem"
          >
            <a
              class="emotion-70 emotion-71"
              href="/news/stories"
            >
              Stories
            </a>
          </li>
        </ul>
      </div>
    </div>
  </nav>
</div>
`;

exports[`Navigation Container should correctly render canonical navigation on non-home navigation page 1`] = `
.emotion-0 {
  position: relative;
  background-color: #B80000;
  border-top: 0.0625rem solid #FFFFFF;
}

.emotion-0 .emotion-17::after {
  left: 0;
}

.emotion-2 {
  position: relative;
  max-width: 80rem;
  margin: 0 auto;
}

.emotion-4 {
  position: relative;
}

.emotion-6 {
  position: relative;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 0;
  float: left;
  height: 2.75rem;
  width: 2.75rem;
}

.emotion-6:hover,
.emotion-6:focus {
  cursor: pointer;
  box-shadow: inset 0 0 0 0.25rem #FFFFFF;
}

.emotion-6:hover::after,
.emotion-6:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  border: 0.25rem solid #FFFFFF;
}

@media (min-width:37.5rem) {
  .emotion-6 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width:20rem) {
  .emotion-6 {
    height: 2.75rem;
    width: 2.75rem;
  }
}

.emotion-6 svg {
  vertical-align: middle;
}

.emotion-8 {
  color: #fff;
  fill: currentColor;
}

.emotion-10 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

@media (max-width:37.4375rem) {
  .emotion-12 {
    white-space: nowrap;
    overflow-x: scroll;
    -webkit-scroll-behavior: auto;
    -moz-scroll-behavior: auto;
    -ms-scroll-behavior: auto;
    scroll-behavior: auto;
    -webkit-overflow-scrolling: touch;
    -webkit-scrollbar-width: none;
    -moz-scrollbar-width: none;
    -ms-scrollbar-width: none;
    scrollbar-width: none;
    -ms-overflow-style: none;
  }

  .emotion-12::-webkit-scrollbar {
    display: none;
  }

  .emotion-12:after {
    content: ' ';
    height: 100%;
    width: 3rem;
    position: absolute;
    right: 0;
    bottom: 0;
    z-index: 3;
    overflow: hidden;
    pointer-events: none;
    background: linear-gradient( to right,rgba(184,0,0,0) 0%,rgba(184,0,0,1) 100% );
  }

  @media (min-width:25rem) {
    .emotion-12:after {
      width: 6rem;
    }
  }
}

.emotion-14 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  position: relative;
}

@media (min-width:37.5rem) {
  .emotion-14 {
    overflow: hidden;
  }
}

.emotion-16 {
  display: inline-block;
  position: relative;
  z-index: 2;
}

@media (max-width:37.4375rem) {
  .emotion-16:last-child {
    margin-right: 3rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-16::after {
    content: '';
    position: absolute;
    bottom: -1px;
    width: 80rem;
    border-bottom: 0.0625rem solid #EAB3B3;
    z-index: -1;
  }
}

.emotion-18 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #FDFDFD;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0.75rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-18 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-18 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (max-width:37.4375rem) {
  .emotion-18 {
    padding: 0.75rem 0.5rem;
  }
}

.emotion-18:hover::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
}

.emotion-18:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
  top: 0;
  border: 0.25rem solid #FFFFFF;
}

.emotion-60 {
  background-color: #222222;
  clear: both;
  overflow: hidden;
  height: 0;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  -webkit-transition-timing-function: cubic-bezier(0,0,0.58,1);
  transition-timing-function: cubic-bezier(0,0,0.58,1);
  visibility: hidden;
}

@media (min-width:37.5rem) {
  .emotion-60 {
    display: none;
    visibility: hidden;
  }
}

@media (prefers-reduced-motion:reduce) {
  .emotion-60 {
    -webkit-transition: none;
    transition: none;
  }
}

.emotion-62 {
  list-style-type: none;
  margin: 0;
  padding: 0 0.5rem;
  border-bottom: 0.125rem solid #3F3F42;
}

.emotion-64 {
  padding: 0.75rem 0;
  border-bottom: 0.0625rem solid #3F3F42;
}

.emotion-64:last-child {
  padding-bottom: 1rem;
  border: 0;
}

.emotion-66 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-66 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-66 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-66:hover,
.emotion-66:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div>
  <nav
    class="emotion-0 emotion-1"
    dir="ltr"
    role="navigation"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <button
          aria-expanded="false"
          class="emotion-6 emotion-7"
          dir="ltr"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="emotion-8 emotion-9"
            focusable="false"
            height="2.75rem"
            viewBox="0 0 44 44"
            width="2.75rem"
          >
            <path
              d="M12 29h21v-2.333H12V29zm0-5.833h21v-2.334H12v2.334zM12 15v2.333h21V15H12z"
            />
          </svg>
          <span
            class="emotion-10 emotion-11"
          >
            Sections
          </span>
        </button>
        <div
          class="emotion-12 emotion-13"
          dir="ltr"
        >
          <ul
            class="emotion-14 emotion-15"
            role="list"
          >
            <li
              class="emotion-16 emotion-17"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-18 emotion-19"
                href="/news"
              >
                Home
              </a>
            </li>
            <li
              class="emotion-16 emotion-17"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-18 emotion-19"
                href="/news/uk"
              >
                UK
              </a>
            </li>
            <li
              class="emotion-16 emotion-17"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-18 emotion-19"
                href="/news/world"
              >
                World
              </a>
            </li>
            <li
              class="emotion-16 emotion-17"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-18 emotion-19"
                href="/news/business"
              >
                Business
              </a>
            </li>
            <li
              class="emotion-16 emotion-17"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-18 emotion-19"
                href="/news/politics"
              >
                Politics
              </a>
            </li>
            <li
              class="emotion-16 emotion-17"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-18 emotion-19"
                href="/news/technology"
              >
                Tech
              </a>
            </li>
            <li
              class="emotion-16 emotion-17"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-18 emotion-19"
                href="/news/science_and_environment"
              >
                Science
              </a>
            </li>
            <li
              class="emotion-16 emotion-17"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-18 emotion-19"
                href="/news/health"
              >
                Health
              </a>
            </li>
            <li
              class="emotion-16 emotion-17"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-18 emotion-19"
                href="/news/education"
              >
                Family & Education
              </a>
            </li>
            <li
              class="emotion-16 emotion-17"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-18 emotion-19"
                href="/news/entertainment_and_arts"
              >
                Entertainment & Arts
              </a>
            </li>
            <li
              class="emotion-16 emotion-17"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-18 emotion-19"
                href="/news/stories"
              >
                Stories
              </a>
            </li>
          </ul>
        </div>
      </div>
      <div
        class="emotion-60 emotion-61"
        height="0"
      >
        <ul
          class="emotion-62 emotion-63"
          role="list"
        >
          <li
            class="emotion-64 emotion-65"
            role="listitem"
          >
            <a
              class="emotion-66 emotion-67"
              href="/news"
            >
              Home
            </a>
          </li>
          <li
            class="emotion-64 emotion-65"
            role="listitem"
          >
            <a
              class="emotion-66 emotion-67"
              href="/news/uk"
            >
              UK
            </a>
          </li>
          <li
            class="emotion-64 emotion-65"
            role="listitem"
          >
            <a
              class="emotion-66 emotion-67"
              href="/news/world"
            >
              World
            </a>
          </li>
          <li
            class="emotion-64 emotion-65"
            role="listitem"
          >
            <a
              class="emotion-66 emotion-67"
              href="/news/business"
            >
              Business
            </a>
          </li>
          <li
            class="emotion-64 emotion-65"
            role="listitem"
          >
            <a
              class="emotion-66 emotion-67"
              href="/news/politics"
            >
              Politics
            </a>
          </li>
          <li
            class="emotion-64 emotion-65"
            role="listitem"
          >
            <a
              class="emotion-66 emotion-67"
              href="/news/technology"
            >
              Tech
            </a>
          </li>
          <li
            class="emotion-64 emotion-65"
            role="listitem"
          >
            <a
              class="emotion-66 emotion-67"
              href="/news/science_and_environment"
            >
              Science
            </a>
          </li>
          <li
            class="emotion-64 emotion-65"
            role="listitem"
          >
            <a
              class="emotion-66 emotion-67"
              href="/news/health"
            >
              Health
            </a>
          </li>
          <li
            class="emotion-64 emotion-65"
            role="listitem"
          >
            <a
              class="emotion-66 emotion-67"
              href="/news/education"
            >
              Family & Education
            </a>
          </li>
          <li
            class="emotion-64 emotion-65"
            role="listitem"
          >
            <a
              class="emotion-66 emotion-67"
              href="/news/entertainment_and_arts"
            >
              Entertainment & Arts
            </a>
          </li>
          <li
            class="emotion-64 emotion-65"
            role="listitem"
          >
            <a
              class="emotion-66 emotion-67"
              href="/news/stories"
            >
              Stories
            </a>
          </li>
        </ul>
      </div>
    </div>
  </nav>
</div>
`;

exports[`Navigation Container should correctly render canonical navigation on non-navigation page 1`] = `
.emotion-0 {
  position: relative;
  background-color: #B80000;
  border-top: 0.0625rem solid #FFFFFF;
}

.emotion-0 .emotion-17::after {
  left: 0;
}

.emotion-2 {
  position: relative;
  max-width: 80rem;
  margin: 0 auto;
}

.emotion-4 {
  position: relative;
}

.emotion-6 {
  position: relative;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 0;
  float: left;
  height: 2.75rem;
  width: 2.75rem;
}

.emotion-6:hover,
.emotion-6:focus {
  cursor: pointer;
  box-shadow: inset 0 0 0 0.25rem #FFFFFF;
}

.emotion-6:hover::after,
.emotion-6:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  border: 0.25rem solid #FFFFFF;
}

@media (min-width:37.5rem) {
  .emotion-6 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width:20rem) {
  .emotion-6 {
    height: 2.75rem;
    width: 2.75rem;
  }
}

.emotion-6 svg {
  vertical-align: middle;
}

.emotion-8 {
  color: #fff;
  fill: currentColor;
}

.emotion-10 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

@media (max-width:37.4375rem) {
  .emotion-12 {
    white-space: nowrap;
    overflow-x: scroll;
    -webkit-scroll-behavior: auto;
    -moz-scroll-behavior: auto;
    -ms-scroll-behavior: auto;
    scroll-behavior: auto;
    -webkit-overflow-scrolling: touch;
    -webkit-scrollbar-width: none;
    -moz-scrollbar-width: none;
    -ms-scrollbar-width: none;
    scrollbar-width: none;
    -ms-overflow-style: none;
  }

  .emotion-12::-webkit-scrollbar {
    display: none;
  }

  .emotion-12:after {
    content: ' ';
    height: 100%;
    width: 3rem;
    position: absolute;
    right: 0;
    bottom: 0;
    z-index: 3;
    overflow: hidden;
    pointer-events: none;
    background: linear-gradient( to right,rgba(184,0,0,0) 0%,rgba(184,0,0,1) 100% );
  }

  @media (min-width:25rem) {
    .emotion-12:after {
      width: 6rem;
    }
  }
}

.emotion-14 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  position: relative;
}

@media (min-width:37.5rem) {
  .emotion-14 {
    overflow: hidden;
  }
}

.emotion-16 {
  display: inline-block;
  position: relative;
  z-index: 2;
}

@media (max-width:37.4375rem) {
  .emotion-16:last-child {
    margin-right: 3rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-16::after {
    content: '';
    position: absolute;
    bottom: -1px;
    width: 80rem;
    border-bottom: 0.0625rem solid #EAB3B3;
    z-index: -1;
  }
}

.emotion-18 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #FDFDFD;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0.75rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-18 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-18 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (max-width:37.4375rem) {
  .emotion-18 {
    padding: 0.75rem 0.5rem;
  }
}

.emotion-18:hover::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
}

.emotion-18:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
  top: 0;
  border: 0.25rem solid #FFFFFF;
}

.emotion-60 {
  background-color: #222222;
  clear: both;
  overflow: hidden;
  height: 0;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  -webkit-transition-timing-function: cubic-bezier(0,0,0.58,1);
  transition-timing-function: cubic-bezier(0,0,0.58,1);
  visibility: hidden;
}

@media (min-width:37.5rem) {
  .emotion-60 {
    display: none;
    visibility: hidden;
  }
}

@media (prefers-reduced-motion:reduce) {
  .emotion-60 {
    -webkit-transition: none;
    transition: none;
  }
}

.emotion-62 {
  list-style-type: none;
  margin: 0;
  padding: 0 0.5rem;
  border-bottom: 0.125rem solid #3F3F42;
}

.emotion-64 {
  padding: 0.75rem 0;
  border-bottom: 0.0625rem solid #3F3F42;
}

.emotion-64:last-child {
  padding-bottom: 1rem;
  border: 0;
}

.emotion-66 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-66 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-66 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-66:hover,
.emotion-66:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div>
  <nav
    class="emotion-0 emotion-1"
    dir="ltr"
    role="navigation"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <button
          aria-expanded="false"
          class="emotion-6 emotion-7"
          dir="ltr"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="emotion-8 emotion-9"
            focusable="false"
            height="2.75rem"
            viewBox="0 0 44 44"
            width="2.75rem"
          >
            <path
              d="M12 29h21v-2.333H12V29zm0-5.833h21v-2.334H12v2.334zM12 15v2.333h21V15H12z"
            />
          </svg>
          <span
            class="emotion-10 emotion-11"
          >
            Sections
          </span>
        </button>
        <div
          class="emotion-12 emotion-13"
          dir="ltr"
        >
          <ul
            class="emotion-14 emotion-15"
            role="list"
          >
            <li
              class="emotion-16 emotion-17"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-18 emotion-19"
                href="/news"
              >
                Home
              </a>
            </li>
            <li
              class="emotion-16 emotion-17"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-18 emotion-19"
                href="/news/uk"
              >
                UK
              </a>
            </li>
            <li
              class="emotion-16 emotion-17"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-18 emotion-19"
                href="/news/world"
              >
                World
              </a>
            </li>
            <li
              class="emotion-16 emotion-17"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-18 emotion-19"
                href="/news/business"
              >
                Business
              </a>
            </li>
            <li
              class="emotion-16 emotion-17"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-18 emotion-19"
                href="/news/politics"
              >
                Politics
              </a>
            </li>
            <li
              class="emotion-16 emotion-17"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-18 emotion-19"
                href="/news/technology"
              >
                Tech
              </a>
            </li>
            <li
              class="emotion-16 emotion-17"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-18 emotion-19"
                href="/news/science_and_environment"
              >
                Science
              </a>
            </li>
            <li
              class="emotion-16 emotion-17"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-18 emotion-19"
                href="/news/health"
              >
                Health
              </a>
            </li>
            <li
              class="emotion-16 emotion-17"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-18 emotion-19"
                href="/news/education"
              >
                Family & Education
              </a>
            </li>
            <li
              class="emotion-16 emotion-17"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-18 emotion-19"
                href="/news/entertainment_and_arts"
              >
                Entertainment & Arts
              </a>
            </li>
            <li
              class="emotion-16 emotion-17"
              dir="ltr"
              role="listitem"
            >
              <a
                class="emotion-18 emotion-19"
                href="/news/stories"
              >
                Stories
              </a>
            </li>
          </ul>
        </div>
      </div>
      <div
        class="emotion-60 emotion-61"
        height="0"
      >
        <ul
          class="emotion-62 emotion-63"
          role="list"
        >
          <li
            class="emotion-64 emotion-65"
            role="listitem"
          >
            <a
              class="emotion-66 emotion-67"
              href="/news"
            >
              Home
            </a>
          </li>
          <li
            class="emotion-64 emotion-65"
            role="listitem"
          >
            <a
              class="emotion-66 emotion-67"
              href="/news/uk"
            >
              UK
            </a>
          </li>
          <li
            class="emotion-64 emotion-65"
            role="listitem"
          >
            <a
              class="emotion-66 emotion-67"
              href="/news/world"
            >
              World
            </a>
          </li>
          <li
            class="emotion-64 emotion-65"
            role="listitem"
          >
            <a
              class="emotion-66 emotion-67"
              href="/news/business"
            >
              Business
            </a>
          </li>
          <li
            class="emotion-64 emotion-65"
            role="listitem"
          >
            <a
              class="emotion-66 emotion-67"
              href="/news/politics"
            >
              Politics
            </a>
          </li>
          <li
            class="emotion-64 emotion-65"
            role="listitem"
          >
            <a
              class="emotion-66 emotion-67"
              href="/news/technology"
            >
              Tech
            </a>
          </li>
          <li
            class="emotion-64 emotion-65"
            role="listitem"
          >
            <a
              class="emotion-66 emotion-67"
              href="/news/science_and_environment"
            >
              Science
            </a>
          </li>
          <li
            class="emotion-64 emotion-65"
            role="listitem"
          >
            <a
              class="emotion-66 emotion-67"
              href="/news/health"
            >
              Health
            </a>
          </li>
          <li
            class="emotion-64 emotion-65"
            role="listitem"
          >
            <a
              class="emotion-66 emotion-67"
              href="/news/education"
            >
              Family & Education
            </a>
          </li>
          <li
            class="emotion-64 emotion-65"
            role="listitem"
          >
            <a
              class="emotion-66 emotion-67"
              href="/news/entertainment_and_arts"
            >
              Entertainment & Arts
            </a>
          </li>
          <li
            class="emotion-64 emotion-65"
            role="listitem"
          >
            <a
              class="emotion-66 emotion-67"
              href="/news/stories"
            >
              Stories
            </a>
          </li>
        </ul>
      </div>
    </div>
  </nav>
</div>
`;
